--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
     background: #496DDB;
-    padding: 20px calc(50% - 500px) 10px;
+    padding: 20px  0 10px calc(50% - 500px);
 }
 
 .header__title {
