--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -39,3 +39,10 @@
     opacity: 0.5;
     cursor: not-allowed;
 }
+
+@media screen and (max-width:850px) {
+    
+    .search-box__form-input {
+        width: 60vw;
+    }
+}
