--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -43,6 +43,7 @@
 @media screen and (max-width:850px) {
     
     .search-box__form-input {
-        width: 60vw;
+        width: 61vw;
+        /* min-width: 220px; */
     }
 }
