--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -16,28 +16,26 @@
 
 .main-page__favorites {
     width: 35%;
-    min-width: 250px; 
+    /* min-width: 250px;  */
     margin-right: 20px;  
 }
 
 @media screen and (max-width:850px) {
     .main-page__content {
         flex-direction: column-reverse;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
     }
     .main-page__favorites {
         position: absolute;
         top: 200px; 
-        width: 60vw;
+        width: 75vw;
         margin-left: 40px;
+        min-width: 255px;
     }
     .main-page__movies {
         position: relative;
         top: 250px;
-        min-width: 300px; 
-        width: 80vw;
+        min-width: 255px; 
+        width: 75vw;
     }
     .main-page__main-section {
         padding-left: 40px;
