--- a/src/components/MovieItem/MovieItem.css
+++ b/src/components/MovieItem/MovieItem.css
@@ -7,6 +7,7 @@
 .movie-item__poster {
     height: 150px;
     margin-right: 21px;
+    width: 105px;
 }
 
 .movie-item__title {
@@ -28,4 +29,15 @@
     cursor: pointer;
     opacity: 0.9;
     transition: all 0.2s linear;
+}
+
+@media screen and (max-width:850px) {
+    
+    .movie-item {
+        display: flex;
+        flex-direction: column;
+    }
+    .movie-item__poster {
+        margin-bottom: 5px;
+    }
 }
